--- a/index.html
+++ b/index.html
@@ -358,7 +358,8 @@
                         </div></div>
                 </div>
                 <div class="row ">
-                    <div class="col largeimg"><img src="img4.png" alt></div>
+                    <div class="col largeimg">
+                        <img src="img4.png" alt></div>
                 </div>
             </div>
         </section>
@@ -372,8 +373,8 @@
                         <h3>Testimonials</h3>
                     </div>
                     <div class="row abc">
-                        <div class="col-md-6 col-12"><img src="profile.png"
-                                alt></div>
+                        <div class="col-md-6 col-12">
+                            <img src="profile.png"alt></div>
                         <div class="col-md-6 col-12">
                             <h2>Andre Colon</h2>
                             <p>"very much satisfied with the service.Delivered
@@ -427,7 +428,6 @@
             <!-- tablearea -->
             <section class="tablearea">
                 <div class="container">
-
                     <div class="row">
                         <div class="col">
                             <img src="blogo.png" alt>
@@ -438,23 +438,23 @@
                         <div class="col">
                             <h6>Quick Links</h6>
                             <ul>
-                                <li>Google Adwords Management</li>
-                                <li>Adwords performance Report</li>
-                                <li>Adwords for Display</li>
-                                <li>Web Designing</li>
-                                <li>SEO</li>
+                                <li> <i class="fa fa-long-arrow-right"> </i>  Google Adwords Management</li>
+                                <li><i class="fa fa-long-arrow-right"> </i> Adwords performance Report</li>
+                                <li><i class="fa fa-long-arrow-right"> </i> Adwords for Display</li>
+                                <li><i class="fa fa-long-arrow-right"> </i> Web Designing</li>
+                                <li><i class="fa fa-long-arrow-right"> </i> SEO</li>
                             </ul>
                         </div>
 
                         <div class="col">
                             <h6> Office Address</h6>
-                            <p>6200 N Charles St,Baltumore, MD 21212, <br>
+                            <p> <i class="fa fa-map-marker"> </i>  6200 N Charles St,Baltumore, MD 21212, <br>
                                 United States</p>
                         </div>
                         <div class="col">
                             <h6>Contact Us </h6>
-                            <a href="#">+ 140&nbsp;000 &nbsp; 0000</a><br>
-                            <a href="#">petra@gmail.com</a>
+                            <i class="fa fa-phone"> </i> <a href="#"> + 140&nbsp;000 &nbsp; 0000</a><br>
+                            <a href="#"><i class="fa fa-at"> </i> petra@gmail.com</a>
                         </div>
                     </div>
                 </div>
