--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     </head>
     <body>
         <header class="menuarea">
-            <div class="container">
+            <div class="container-fluid">
 
                 <div class="row">
                     <div class="col-md-2 col-12 ">
@@ -76,7 +76,7 @@
             </div>
         </header>
         <section class="slidearea">
-            <div class="container">
+            <div class="container-fluid">
 
                 <div class="row">
                     <div class="col">
